Freedom Sanbox Ant Deploy/src/objects/SMS_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SMS_History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SMS_History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SMS_History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>ObjectType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal</label>
        <referenceTo>Renewal__c</referenceTo>
        <relationshipLabel>SMS_History</relationshipLabel>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMSText__c</fullName>
        <label>SMSText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SenderId__c</fullName>
        <label>SenderId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMS_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>response__c</fullName>
        <label>response</label>
        <type>TextArea</type>
    </fields>
    <label>SMS History</label>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>